[gd_scene load_steps=11 format=2]

[ext_resource path="res://HUD/Button_Green_Highlighted.png" type="Texture" id=1]
[ext_resource path="res://HUD/Button_Green.png" type="Texture" id=2]
[ext_resource path="res://HUD/Button_Green_Selected.png" type="Texture" id=3]
[ext_resource path="res://HUD/Stars iphone6+.png" type="Texture" id=4]
[ext_resource path="res://HUD/Button_Blue_Highlighted.png" type="Texture" id=5]
[ext_resource path="res://HUD/Button_Blue_Selected.png" type="Texture" id=6]
[ext_resource path="res://HUD/Button_Blue.png" type="Texture" id=7]
[ext_resource path="res://HUD/Title.png" type="Texture" id=8]
[ext_resource path="res://HUD/MainMenu.gd" type="Script" id=9]
[ext_resource path="res://HUD/FadeIn.gd" type="Script" id=10]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 9 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.362319, 0.386473 )
texture = ExtResource( 4 )
centered = false

[node name="Play" type="TextureButton" parent="."]
margin_left = 288.0
margin_top = 224.0
margin_right = 488.0
margin_bottom = 284.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credits" type="TextureButton" parent="."]
margin_left = 288.0
margin_top = 320.0
margin_right = 488.0
margin_bottom = 380.0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 384, 125 )
scale = Vector2( 1, 1.11538 )
texture = ExtResource( 8 )

[node name="FadeIn" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Credits" to="." method="_on_Credits_pressed"]
